Added note about data

--- a/ChoiceModeling_ds10-04-18.ipynb
+++ b/ChoiceModeling_ds10-04-18.ipynb
@@ -34,40 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #Remove some of the data, and clean it up.\n",
-    "# floc = '~//Code//python//datasync_10-04//'\n",
-    "# fname = 'reversal_data.csv'\n",
-    "# data = pd.read_csv(floc+fname)\n",
-    "\n",
-    "# #clean and reformat data\n",
-    "\n",
-    "# data['greenProb'] = data['greenProb']/100\n",
-    "# data['redProb'] = data['redProb']/100\n",
-    "# data['choseRed'] = ((data['choseRed']==2) | (data['choseRed']==4))+0\n",
-    "\n",
-    "# #get subset of data\n",
-    "# nsess = 72\n",
-    "# animalId = 2\n",
-    "# relevant_columns = ['animal','sessionNum','trialNum','volatility','rewarded','choseRed','greenProb','redProb','greenMag','redMag']\n",
-    "# data_subset = data.loc[(data['sessionNum']<=nsess) & (data['animal']==animalId)][relevant_columns]\n",
-    "\n",
-    "# data_subset = data_subset.loc[data_subset['volatility']==1]\n",
-    "\n",
-    "# data_subset = data_subset[['greenProb','redProb','greenMag','redMag','choseRed','rewarded']]\n",
-    "# data_subset.to_csv(floc+'reversal_data_subset.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-31f4d77020b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfloc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'~//Code//python//datasync_10-04//'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'reversal_data_subset.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloc\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Load in the data\n",
+    "#This is resampled and censored data from a real experiment. \n",
     "floc = '~//Code//python//datasync_10-04//'\n",
     "fname = 'reversal_data_subset.csv'\n",
     "data = pd.read_csv(floc+fname)"
