--- a/ChoiceModeling_ds10-04-18.ipynb
+++ b/ChoiceModeling_ds10-04-18.ipynb
@@ -962,7 +962,7 @@
     "Let $\\hat{P_i}$ be our animals' subjective belief about the probability that the red target yields a reward on trial i. After the animal observes an outcome on trial i, $R_i$, the animal will update their belief using the following rule:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\hat{P_{i+1}} = P_{i} + {\\alpha}(R_i - \\hat{P_i})\n",
+    "\\hat{P_{i+1}} = \\hat{P_{i}} + {\\alpha}(R_i - \\hat{P_i})\n",
     "\\end{equation}\n",
     "\n",
     "where $\\alpha$ is a learning rate parameter, which can be fitted.\n",
